# My-Distributed-File-System

./: .gitignore  README.md
bbfs/: Makefile  Makefile.in  configure  configure.ac
bbfs/example/: Makefile  build.sh  read.sh  storagenodes.conf  unbuild.sh  write.sh
bbfs/html/: Makefile.in
bbfs/myftp/: Makefile  client.sh  myftp.c  myftp.hpp  myftpclient.c  myftpserver.c  myftpserver.cpp  myftpserver.hpp  server.sh
bbfs/src/: Makefile  Makefile.am  Makefile.in  bbfs.c  bbfs.cpp  bbfs.hpp  config.hpp  config.hpp.in  log.cpp  myftp.cpp  myftp.hpp  myftpclient.cpp  myftpclient.hpp  myftpserver.hpp  params.hpp  raid5.cpp  raid5.hpp
